# ThousandLogs

./: Cargo.toml  README.md  icon.xcf
src/: index.html  main.js  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
