[package]
name = "autotclog-rs"
version = "3.0.1"
description = "Writing TC logs is tedious and boring, speed up the process with AutoTCLog-RS."
authors = ["Gabriel Sykes"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3.1"
regex = "1.10.5"
xlsxwriter = "0.6.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
